--- a/G63.html
+++ b/G63.html
@@ -27,6 +27,10 @@
     <label for="w">网格宽度</label>
     <input type="text" name="w" id="w" />
   </p>
+  <p>
+    <label for="maxloss">最大单边</label>
+    <input type="text" name="maxloss" id="maxloss" value="1" />
+  </p>
   <label for="closetoday">平今收费</label>
   <input name="closetoday" id="closetoday" type="checkbox" value="1" checked="checked" />
   <label for="closetoday">调式</label>
